Finally fixed navbar wrapping problem using white-space:nowrap; Reset the minimum screen width to 550px.

--- a/iknowthatyoulikemystyle.css
+++ b/iknowthatyoulikemystyle.css
@@ -55,7 +55,7 @@ h3 {
   margin-right: auto;
   width: 75%;
   height: 75px;
-  min-width: 600px;
+  min-width: 550px;
 }
 
 #formatbox {
@@ -71,7 +71,7 @@ h3 {
   border-style: solid;
   padding: 0px 0px 0px 0px;
   width: 75%;
-  min-width: 600px;
+  min-width: 550px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 0px;
@@ -86,6 +86,7 @@ h3 {
     background-repeat: repeat-x;
     padding:10px 20px 10px 20px;
     text-align: center;
+    white-space: nowrap;
     height: auto;
     width: auto;
 }
